a11y, soc done. TODO: layout and deployment

--- a/palette-picker/index.html
+++ b/palette-picker/index.html
@@ -11,8 +11,8 @@
       <h1>Palette Picker</h1>
     </header>
     <main id="app">
-      <section id="form-section">
-        <form>
+      <section id="form-section" aria-label="form-section">
+        <form aria-label="form">
           <h2>Add a Palette</h2>
           <label for="title">Palette Title</label>
           <input type="text" id="title" name="title" required/>
@@ -34,9 +34,9 @@
           <button type="submit">Create the palette</button>
         </form>
       </section>
-      <section id="palettes">
+      <section id="palettes-section" aria-label="palettes-section">
         <h2>Palettes</h2>
-        <ul id="li-container">
+        <ul id="li-container" aria-label="List of Palettes">
           <!-- list elements go here -->
         </ul>
       </section>
